[project]
name = "aquatk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "openl3~=0.4.0",
    "tqdm~=4.66.1",
    "panns-inference~=0.1.1",
    "scikit-learn",
    "streamlit",
    "tensorflow",
    "tf_slim",
    "six",
    "soundfile",
    "hatchling>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
